# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.469 2005/12/19 19:10:04 wolf31o2 Exp $

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-controller.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh:
  Fixed up spacing/coding style on tinderbox.

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kill-chroot-pids.sh, targets/support/kmerge.sh,
  targets/support/livecdfs-update.sh, targets/support/post-kmerge.sh,
  targets/support/pre-kmerge.sh, targets/support/rc-update.sh,
  targets/support/target_image_setup.sh, targets/support/unmerge.sh:
  Fixed up spacing/coding style on support.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst:
  Optimize catalyst bytecode and set a sane sys.exit for keyboard interrupts

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage4/stage4-chroot.sh, targets/stage4/stage4-controller.sh,
  targets/stage4/stage4-preclean-chroot.sh:
  Fixed up spacing/coding style on stage4.

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-controller.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-controller.sh,
  targets/stage3/stage3-preclean-chroot.sh:
  Fixed up spacing/coding style on stages 2 and 3

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage1/stage1-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh:
  Fixed up spacing/coding style on stage1. Also changed
  gcc-config/binutils-config to be outside the chroot.

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/netboot/netboot-controller.sh, targets/netboot/netboot-image.sh:
  Fixed up spacing/coding style on netboot.
