@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.19 2005/12/09 17:22:57 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.20 2005/12/19 20:53:13 rocket Exp $
 
 # Simple desriptions of catalyst settings. Please refer to the online
 # documentation for more information.
@@ -27,11 +27,8 @@ distdir="/usr/portage/distfiles"
 #  WARNING: moving parts of the portage tree from within fsscript *will* break
 #  your cache.  The cache is unlinked before any empty or rm processing, though.
 #
-# DIGESTS CREATION 
-# md5 = Create a .digests file containing the md5 of the output object
-# sha = Create a .digests file containing the sha1 of the output object
 # (These options can be used together)
-options="autoresume kerncache md5 pkgcache seedcache sha snapcache"
+options="autoresume kerncache pkgcache seedcache snapcache"
 
 # sharedir specifies where all of the catalyst runtime executables are. Most
 # users do not need to change this.
@@ -47,6 +44,18 @@ storedir="/var/tmp/catalyst"
 # snapshot_cache specifies where the snapshots will be cached to if snapcache is
 # enabled in the options.
 # snapshot_cache="<path_to_new_cache_dir>"
+
+# Internal hash function catalyst should use for things like autoresume,seedcache,etc.
+# crc32 is the default and fastest.  You shouldnt ever need to change this unless your os
+# doesnt support it.
+# Supported options: sha1, sha224, ripemd128, ripemd320, sha384, crc32, ripemd256, sha256, sha512, ripemd160, md5
+# hash_function="crc32"
+
+# DIGESTS CREATION
+# Creates a .digests file containing the hash output from any of the supported options below.  Adding them all
+# May take a long time.
+# Supported options: sha1, sha224, ripemd128, ripemd320, sha384, crc32, ripemd256, sha256, sha512, ripemd160, md5
+# digests="sha1 sha224 ripemd128 ripemd320 sha384 crc32 ripemd256 sha256 sha512 ripemd160 md5"
 
 # envscript allows users to set options such as http proxies, MAKEOPTS,
 # GENTOO_MIRRORS, or any other environment variables needed for building.
